# picross-solver

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.unx  README.md  main.cpp  makefile  picross_solver.cpp  picross_solver.h
.github/: pull_request_template.md
.github/workflows/: build.yml  gui.yml  packaging.yml  travis.yml
cmake/config/: compiler_options.cmake
doc/: Create_a_Picross.md  FILE_FORMAT_NIN.md  FILE_FORMAT_NON.md  PERF.md
inputs/: all_inputs.txt  cauldron.non  domino_logic.txt  example_input.txt  giraffe_6361.txt  input_12.txt  input_13.txt  input_14.txt  invalid_input.txt  note.nin  test_pattern_01.txt  test_pattern_02.txt  test_pattern_03.txt  test_pattern_04.txt  test_pattern_05.txt  test_pattern_06.txt  test_pattern_07.txt  test_pattern_08.txt  test_pattern_09.txt  test_pattern_10.txt  test_pattern_11.txt  test_pattern_12.txt  test_pattern_13.txt  test_pattern_14.txt  test_pattern_15.txt
inputs/jwilk/: README  jwilk-007-vulture.non  jwilk-038-bike.non  jwilk-091-owl.non  jwilk-120-bubble-cat.non  jwilk-150-buffalo.non
inputs/nonograms_org/: barque_3016.txt  dragon_19510.txt  e_t_39143.txt  elephant_seals_37836.txt  gargantua_51237.txt  giraffe_6361.txt  jellyfish_4010.txt  lighthouse_12771.txt  nonograms-org-03016-barque.non  nonograms-org-04010-jellyfish.non  nonograms-org-05114-rachmaninoff.non  nonograms-org-06361-giraffe.non  nonograms-org-12771-lighthouse.non  nonograms-org-17403-raccoon.non  nonograms-org-19510-dragon.non  nonograms-org-37836-elephant-seals.non  nonograms-org-39143-e-t.non  nonograms-org-42735-wolverine.non  nonograms-org-49350-witch.non  nonograms-org-51237-gargantua.non  raccoon_17403.txt  rachmaninoff_5114.txt  witch_49350.txt  wolverine_42735.txt
inputs/picross_ds/: Picross-Free-08-H-Judo.txt  Picross-Free-09-D-Duckling.txt  Picross-Normal-11-D-Mushroom.txt
inputs/qnonograms/: README.md  sun.non  tiger.non
inputs/raw/: README.md  moss-60x60-bw-1.pbm  moss-60x60-bw-2.pbm  note.txt  (+3 more)
outputs/: README.md  all_inputs.txt  all_outputs.txt  domino_logic.txt  example_input.txt  example_output.txt  giraffe_6361.txt  input_12.txt  input_13.txt  input_14.txt  invalid_input.txt  invalid_output.txt  output_12.txt  output_13.txt  output_14.txt  test_pattern_01.txt  test_pattern_02.txt  test_pattern_03.txt  test_pattern_04.txt  test_pattern_05.txt  test_pattern_06.txt  test_pattern_07.txt  test_pattern_08.txt  test_pattern_09.txt  test_pattern_10.txt  test_pattern_11.txt  test_pattern_12.txt  test_pattern_13.txt  test_pattern_14.txt  test_pattern_15.txt  validation.csv
resources/: app.icns
scripts/: validation.sh
src/: main.cpp  picross_solver.cpp  picross_solver.h
src/apps/gui/: CMakeLists.txt
src/apps/gui/imgui/: CMakeLists.txt
src/apps/gui/imgui/src/: imgui_config.h
src/apps/gui/src/: about_window.cpp  about_window.h  bitmap_image.h  bitmap_io_raw.cpp  bitmap_io_raw.h  bitmap_to_glfw_image.cpp  bitmap_to_glfw_image.h  embedded_file.cpp  embedded_file.h  err_window.cpp  err_window.h  glfw_context.cpp  glfw_image.h  goal_window.cpp  goal_window.h  grid_info.h  grid_window.cpp  grid_window.h  icon.rc.in  imgui_helpers.cpp  imgui_helpers.h  logo.cpp  logo.h  logo_file.cpp  logo_file.h  main.cpp  parameter.h  pfd_wrap.h  picross_file.cpp  picross_file.h  settings.cpp  settings.h  settings_window.cpp  settings_window.h  style.cpp  style.h  window_icon.cpp  window_icon.h  window_icon_files.cpp  window_icon_files.h  (+1 more)
src/cli/: CMakeLists.txt
src/cli/src/: argagg_wrap.h  main.cpp  observer.cpp  observer.h
src/gui/: CMakeLists.txt
src/gui/imgui/: CMakeLists.txt
src/gui/imgui/src/: imgui_config.h
src/gui/src/: bitmap_file.cpp  bitmap_file.h  draw_grid.cpp  draw_grid.h  err_window.cpp  err_window.h  glfw_context.cpp  glfw_context.h  goal_window.cpp  grid_info.cpp  grid_info.h  grid_window.cpp  grid_window.h  imgui_helpers.cpp  imgui_helpers.h  imgui_wrap.h  main.cpp  picross_file.cpp  picross_file.h  screen.h  settings.cpp  settings.h  settings_window.cpp  settings_window.h  style.cpp  style.h  window_layout.h
src/picross/: CMakeLists.txt
src/picross/include/picross/: picross.h  picross_input_grid.h  picross_io.h  picross_observer.h  picross_output_grid.h  picross_stats.h
src/picross/src/: binomial.cpp  binomial.h  grid.cpp  grid.h  input_grid.cpp  line.cpp  line.h  line_alternatives.cpp  line_alternatives.h  line_cache.cpp  line_cache.h  line_constraint.cpp  line_constraint.h  line_span.cpp  line_span.h  output_grid.cpp  output_grid_utils.cpp  picross.cpp  picross_io.cpp  picross_solver.cpp  picross_solver.h  picross_solver_version.cpp  picross_solver_version.h.in  picross_stats.cpp  picross_stats_internal.h  solver.cpp  solver.h  solver_policy.cpp  solver_policy.h  work_grid.cpp  work_grid.h
src/stdutils/: CMakeLists.txt
src/stdutils/include/stdutils/: chrono.h  color.h  io.h  macros.h  memory.h  platform.h  span.h  string.h  type_traits.h
src/stdutils/src/: io.cpp  platform.cpp  string.cpp
src/tests/: CMakeLists.txt
src/tests/picross/: CMakeLists.txt
src/tests/picross/src/: bench_line_alternatives.cpp  bench_solver.cpp  test_binomial.cpp  test_line_alternatives.cpp  test_line_constraint.cpp  test_solver.cpp  test_utils.cpp
src/tests/src/: bench_line_alternatives.cpp  bench_solver.cpp  test_binomial.cpp  test_line_alternatives.cpp  test_line_constraint.cpp  test_solver.cpp  test_utils.cpp
src/tests/stdutils/: CMakeLists.txt
src/tests/stdutils/src/: test_io.cpp  test_span.cpp  test_string.cpp
src/utils/: CMakeLists.txt
src/utils/include/: console_observer.h  duration_meas.h  grid_observer.h
src/utils/include/utils/: bitmap_io.h  compiler_info.h  console_observer.h  console_progress_observer.h  grid_observer.h  input_from_output.h  input_grid_utils.h  picross_file_io.h  project.h  strings.h  test_helpers.h  text_io.h  timeout.h
src/utils/src/: bitmap_io.cpp  compiler_info.cpp  console_observer.cpp  console_progress_observer.cpp  grid_observer.cpp  input_from_output.cpp  input_grid_utils.cpp  picross_file_io.cpp  project.cpp  project_defines.h.in  strings.cpp  test_helpers.cpp  text_io.cpp
(+82 files in other folders)
